--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <link rel="stylesheet" href="style1.css">
 
 <body>
-    <h1 class="pr">BOM DIA</h1>
-    <h1 class="pr sd">SD ANGELO - O MAIS AUDAZ</h1>
+    <h1 class="pr">MINHA PÁGINA DE LOGIN</h1>
+    <h1 class="pr sd">MY LOGIN PAGE</h1>
     <div>
         <h2>LOGIN</h2>
         <input type="text" placeholder="nome">
