--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<link rel="stylesheet" href="style1.css">
+<link rel="stylesheet" href="style.css">
 
 <body>
     <h1 class="pr">MINHA PÁGINA DE LOGIN</h1>
